{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 896,
  "lineage": "5a34df6c-d144-de51-90c7-5b177dadfc19",
  "resources": [
    {
      "module": "module.create_SG_for_LB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_skiff",
      "provider": "module.create_SG_for_LB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:security-group/sg-0a5c48adca94ededb",
            "description": "80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5c48adca94ededb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "10.171.x.x-ForLB-skiff3-dev",
            "name_prefix": "",
            "owner_id": "165412380958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "10.171.x.x-ForLB-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-ForLB-skiff3-dev",
              "Owner": "yaroslav.gankov"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_SG_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_skiff",
      "provider": "module.create_SG_private.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:security-group/sg-0d28c6d4a3b1c1290",
            "description": "local traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d28c6d4a3b1c1290",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.171.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "10.171.x.x-private-skiff3-dev",
            "name_prefix": "",
            "owner_id": "165412380958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "10.171.x.x-private-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-private-skiff3-dev",
              "Owner": "yaroslav.gankov"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_SG_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_skiff",
      "provider": "module.create_SG_public.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:security-group/sg-02673c6ab91b0232e",
            "description": "22+80+8080+8081",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02673c6ab91b0232e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "10.171.x.x-public-skiff3-dev",
            "name_prefix": "",
            "owner_id": "165412380958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "10.171.x.x-public-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-public-skiff3-dev",
              "Owner": "yaroslav.gankov"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb_for_instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "simple_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:165412380958:loadbalancer/app/skiff-ELB/f8809210c902eb2c",
            "arn_suffix": "app/skiff-ELB/f8809210c902eb2c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "skiff-ELB-769026876.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:165412380958:loadbalancer/app/skiff-ELB/f8809210c902eb2c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "skiff-ELB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a5c48adca94ededb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07af7f045febf3b4a"
              },
              {
                "subnet_id": "subnet-0f829de9d02506fa8"
              }
            ],
            "subnets": [
              "subnet-07af7f045febf3b4a",
              "subnet-0f829de9d02506fa8"
            ],
            "tags": {
              "Name": "skiff-ELB"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "skiff-ELB",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.create_SG_for_LB.aws_security_group.SG_skiff",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb_for_instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "simple_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:165412380958:listener/app/skiff-ELB/f8809210c902eb2c/d37c137d8ecc1cec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:165412380958:targetgroup/skiff-target-group/11f5b4c4480d5ede",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:165412380958:listener/app/skiff-ELB/f8809210c902eb2c/d37c137d8ecc1cec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:165412380958:loadbalancer/app/skiff-ELB/f8809210c902eb2c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Owner": "yaroslav.gankov"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_SG_for_LB.aws_security_group.SG_skiff",
            "module.create_lb_for_instances.aws_lb.simple_elb",
            "module.create_lb_for_instances.aws_lb_target_group.simple_elb",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb_for_instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "simple_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:165412380958:targetgroup/skiff-target-group/11f5b4c4480d5ede",
            "arn_suffix": "targetgroup/skiff-target-group/11f5b4c4480d5ede",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:165412380958:targetgroup/skiff-target-group/11f5b4c4480d5ede",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "skiff-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Owner": "yaroslav.gankov"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb_for_instances",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:165412380958:targetgroup/skiff-target-group/11f5b4c4480d5ede-20220909132300508600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:165412380958:targetgroup/skiff-target-group/11f5b4c4480d5ede",
            "target_id": "i-05b83f60dc73a2fe4"
          },
          "dependencies": [
            "module.create_SG_public.aws_security_group.SG_skiff",
            "module.create_lb_for_instances.aws_lb_target_group.simple_elb",
            "module.create_simple_public_instance.aws_instance.skiff_webserver1",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_simple_public_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "skiff_webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:165412380958:instance/i-05b83f60dc73a2fe4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b83f60dc73a2fe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "devops-poligon-master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0819f542c853a87e7",
            "private_dns": "ip-10-171-1-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.171.1.42",
            "public_ip": "34.229.237.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eac8215ed47913b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af7f045febf3b4a",
            "tags": {
              "Name": "skiff3-public-1"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "skiff3-public-1",
              "Owner": "yaroslav.gankov"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02673c6ab91b0232e"
            ]
          },
          "dependencies": [
            "module.create_SG_public.aws_security_group.SG_skiff",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010c2164800c16b76",
            "association_id": "eipassoc-0672af492c744afd7",
            "domain": "vpc",
            "id": "eipalloc-010c2164800c16b76",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05d227194104f0228",
            "private_dns": "ip-10-171-1-242.ec2.internal",
            "private_ip": "10.171.1.242",
            "public_dns": "ec2-107-23-140-173.compute-1.amazonaws.com",
            "public_ip": "107.23.140.173",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Owner": "yaroslav.gankov"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:internet-gateway/igw-0f15de2714ed7acbe",
            "id": "igw-0f15de2714ed7acbe",
            "owner_id": "165412380958",
            "tags": {
              "Name": "10.171.x.x-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-skiff3-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010c2164800c16b76",
            "connectivity_type": "public",
            "id": "nat-0b6a89202e3507b57",
            "network_interface_id": "eni-05d227194104f0228",
            "private_ip": "10.171.1.242",
            "public_ip": "107.23.140.173",
            "subnet_id": "subnet-07af7f045febf3b4a",
            "tags": {
              "Name": "10.171.x.x-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-skiff3-dev",
              "Owner": "yaroslav.gankov"
            }
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_eip.nat",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:route-table/rtb-079f65fe1565184e3",
            "id": "rtb-079f65fe1565184e3",
            "owner_id": "165412380958",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6a89202e3507b57",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "10.171.x.x-skiff3-internal-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-skiff3-internal-dev",
              "Owner": "yaroslav.gankov"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_eip.nat",
            "module.create_skiff_VPC_and_subnets.aws_nat_gateway.ng",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:route-table/rtb-087d49901aaf0c73b",
            "id": "rtb-087d49901aaf0c73b",
            "owner_id": "165412380958",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f15de2714ed7acbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "10.171.x.x-skiff3-public-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-skiff3-public-dev",
              "Owner": "yaroslav.gankov"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_internet_gateway.main_gateway",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_routes_skiff",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3c9fd6228acec51",
            "route_table_id": "rtb-079f65fe1565184e3",
            "subnet_id": "subnet-046123d5dfb244439"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_eip.nat",
            "module.create_skiff_VPC_and_subnets.aws_nat_gateway.ng",
            "module.create_skiff_VPC_and_subnets.aws_route_table.internal_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.internal_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b14db65b609ca64e",
            "route_table_id": "rtb-079f65fe1565184e3",
            "subnet_id": "subnet-0fbe575e3189883e4"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_eip.nat",
            "module.create_skiff_VPC_and_subnets.aws_nat_gateway.ng",
            "module.create_skiff_VPC_and_subnets.aws_route_table.internal_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.internal_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes_skiff",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0295c19db216f48f2",
            "route_table_id": "rtb-087d49901aaf0c73b",
            "subnet_id": "subnet-07af7f045febf3b4a"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_internet_gateway.main_gateway",
            "module.create_skiff_VPC_and_subnets.aws_route_table.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a51795ff7db8669",
            "route_table_id": "rtb-087d49901aaf0c73b",
            "subnet_id": "subnet-0f829de9d02506fa8"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_internet_gateway.main_gateway",
            "module.create_skiff_VPC_and_subnets.aws_route_table.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-0aa88f082d6632f63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.171.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa88f082d6632f63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.171.5.x-skiff3-DB-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.5.x-skiff3-DB-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_subnet.internal_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-0ddb4ac4eee6bfad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.171.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb4ac4eee6bfad0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.171.6.x-skiff3-DB-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.6.x-skiff3-DB-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_subnet.internal_subnets",
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-046123d5dfb244439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.171.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046123d5dfb244439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.171.3.x-skiff3-internal-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.3.x-skiff3-internal-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-0fbe575e3189883e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.171.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbe575e3189883e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.171.4.x-skiff3-internal-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.4.x-skiff3-internal-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_subnet.public_subnets",
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-07af7f045febf3b4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.171.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07af7f045febf3b4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.171.1.x-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.1.x-skiff3-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-0f829de9d02506fa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.171.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f829de9d02506fa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.171.2.x-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.2.x-skiff3-dev",
              "Owner": "yaroslav.gankov"
            },
            "vpc_id": "vpc-08c23f1ae66e30af0"
          },
          "dependencies": [
            "module.create_skiff_VPC_and_subnets.aws_vpc.skiff_vpc",
            "module.create_skiff_VPC_and_subnets.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.create_skiff_VPC_and_subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skiff_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:vpc/vpc-08c23f1ae66e30af0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.171.0.0/16",
            "default_network_acl_id": "acl-078200bebd3cdaa9a",
            "default_route_table_id": "rtb-0db1c5d07d70925a3",
            "default_security_group_id": "sg-0fe2489881f2f07b1",
            "dhcp_options_id": "dopt-056ef27f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08c23f1ae66e30af0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db1c5d07d70925a3",
            "owner_id": "165412380958",
            "tags": {
              "Name": "10.171.x.x-skiff3-dev"
            },
            "tags_all": {
              "Creator": "yaroslav.gankov",
              "Learning": "Terraform",
              "Name": "10.171.x.x-skiff3-dev",
              "Owner": "yaroslav.gankov"
            }
          }
        }
      ]
    }
  ]
}